--- a/views/index.twig
+++ b/views/index.twig
@@ -34,7 +34,7 @@
 			<div class="col-md-12"
 				<footer>
 					This is a footer<br>
-					<a href="<?php echo BASE_URL;?>admin">Admin Panel</a>
+					<a href="{{ 'admin' | url }}">Admin Panel</a>
 				</footer>
 			</div>
 		</div>
