modificadas todas las vistas con twig

--- a/views/index.twig
+++ b/views/index.twig
@@ -1,43 +1,16 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Blog wiht Platzi!</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-</head>
-<body>
-<div class="container">
-	<div class="row">
-		<div class="col-md-12">
-			<h1>Blog Title</h1>
-		</div>
-		<div class="row">
-			<div class="col-md-8">
-				{% for blogPost in blogPosts %}
-					<div class="blog-post">
-						<h2>{{ blogPost.title }}</h2>
-						<p>Jan 1, 2020 by <a href="">Alex</a></p>
-						<div class="blog-post-image">
-							<img src="images/Simpsons_FamilyPicture.png" alt="imagen">	
-						</div>
-						<div class="blog-post-content">
-							{{ blogPost.content }}
-						</div>
-					</div>
-				{% endfor %}
-			</div>
-			<div class="col-md-4">
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+{% extends "layout.twig" %}
 
+{% block content %}
+	{% for blogPost in blogPosts %}
+		<div class="blog-post">
+			<h2>{{ blogPost.title }}</h2>
+			<p>Jan 1, 2020 by <a href="">Alex</a></p>
+			<div class="blog-post-image">
+				<img src="images/Simpsons_FamilyPicture.png" alt="imagen">	
+			</div>
+			<div class="blog-post-content">
+				{{ blogPost.content }}
 			</div>
 		</div>
-		<div class="row">
-			<div class="col-md-12"
-				<footer>
-					This is a footer<br>
-					<a href="{{ 'admin' | url }}">Admin Panel</a>
-				</footer>
-			</div>
-		</div>
-</div>
-</body>
-</html>
+	{% endfor %}
+{% endblock %}
