--- a/views/layout.twig
+++ b/views/layout.twig
@@ -12,12 +12,8 @@
 		</div>
 		<div class="row">
 			<div class="col-md-8">
-				<h2>Admin Panel</h2>
-				<ul>
-					<li>
-						<a href="<?php echo BASE_URL; ?>admin/posts">Manage Posts</a>
-					</li>
-				</ul>
+				{% block content %}
+				{% endblock %}
 			</div>
 			<div class="col-md-4">
 				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
@@ -28,7 +24,7 @@
 			<div class="col-md-12"
 				<footer>
 					This is a footer<br>
-					<a href="<?php echo BASE_URL; ?>admin">Admin Panel</a>
+					<a href="{{ 'admin' | url }}">Admin Panel</a>
 				</footer>
 			</div>
 		</div>
