agregado modelo y dependencias para manejar usuarios, ademas modificada tabla de usuarios en DB para esto

--- a/views/admin/users.twig
+++ b/views/admin/users.twig
@@ -1,19 +1,21 @@
 {% extends "layout.twig" %}
 
 {% block content %}
-	<h2>Posts</h2>
+	<h2>Users</h2>
 	<p>
-		<a class="btn btn-primary" href="{{ 'admin/posts/create' | url}}">New Post</a>
+		<a class="btn btn-primary" href="{{ 'admin/users/create' | url }}">New User</a>
 	</p>
 	<table class="table">
 		<tr>
-			<th>Title</th>
+			<th>Name</th>
+			<th>Email</th>
 			<th>Edit</th>
 			<th>Delete</th>
 		</tr>
-		{% for blogPost in blogPosts %}
+		{% for user in users %}
 			<tr>
-				<td>{{ blogPost.title }}</td>
+				<td>{{ user.name }}</td>
+				<td>{{ user.email }}</td>
 				<td>Edit</td>
 				<td>Delete</td>
 			</tr>
