--- a/views/admin/insert-post.twig
+++ b/views/admin/insert-post.twig
@@ -5,6 +5,17 @@
 	<p>
 		<a class="btn btn-secondary" href="{{ 'admin/posts' | url}}">Back</a>
 	</p>
+	{% if errors %}
+		<div class="alert alert-danger">
+			<ul>
+				{% for input, messages in errors %}
+					{% for message in messages %}
+						<li>{{ input }}: {{ message }}</li>
+					{% endfor %}
+				{% endfor %}
+			</ul>
+		</div>
+	{% endif %}
 	{% if result %}
 		<div class="alert alert-success">Post Saved!</div>
 	{% endif %}
@@ -17,4 +28,4 @@
 		<br>
 		<input class="btn btn-primary" type="submit" value="save">
 	</form>	
-{% endblock%}
+{% endblock %}
