--- a/views/login.twig
+++ b/views/login.twig
@@ -1,7 +1,10 @@
 {% extends "layout.twig" %}
 
 {% block content %}
-	<h2>Login</h2>
+	<h2>Login!</h2>
+	{% if errors %}
+		{% include('partials/errors.twig') %}
+	{% endif %}
 	<form method="post">
 		<div class="form-group">
 			<label for ="inputEmail">Email</label>
@@ -9,7 +12,7 @@
 		</div>
 		<div class="form-group">
 			<label for ="inputPassword">Password</label>
-			<input type="password" class="form-control" name="email" id="inputPassword">
+			<input type="password" class="form-control" name="password" id="inputPassword">
 		</div>
 		<div class="form-group">
 			<input type="submit" class="btn btn-primary" value="login">
