--- a/views/layout.twig
+++ b/views/layout.twig
@@ -3,6 +3,7 @@
 <head>
 	<title>Blog wiht Platzi!</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+	<link rel="stylesheet" href="/css/blog.css">
 </head>
 <body>
 <div class="container">
