--- a/views/admin/insert-post.twig
+++ b/views/admin/insert-post.twig
@@ -11,7 +11,7 @@
 	{% if result %}
 		<div class="alert alert-success">Post Saved!</div>
 	{% endif %}
-	<form method="post">
+	<form method="post" onsubmit="return validateForm()">
 		<div class="form-group">
 			<label for="inputTitle">Title</label>
 			<input class="form-control" type="text" name="title" id="inputTitle">
@@ -24,4 +24,19 @@
 		<br>
 		<input class="btn btn-primary" type="submit" value="save">
 	</form>	
+{% endblock %}
+{% block js %}
+	<script>
+		function validateForm(){
+			var title = document.getElementById('inputTitle').value.trim();
+			if(title == ''){
+				swal(
+				  'Oops...',
+				  'Title is required...',
+				  'error'
+				);
+				return false;
+			}
+		}
+	</script>
 {% endblock %}
