--- a/views/layout.twig
+++ b/views/layout.twig
@@ -3,6 +3,7 @@
 <head>
 	<title>Blog wiht Platzi!</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.10.1/sweetalert2.min.css"/>
 	<link rel="stylesheet" href="/css/blog.css">
 </head>
 <body>
@@ -30,5 +31,8 @@
 			</div>
 		</div>
 </div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.10.1/sweetalert2.min.js"></script>
+{% block js %}
+{% endblock %}
 </body>
 </html>
